Can change and display intervals + more
Display and change intervals and unsubscribe from the dashboard topic when you logout. Updated the DB to save intervals
