# server/Api.Rest/Controllers/CleanAirController.cs
@@ -23,6 +23,8 @@ public class CleanAirController(
     
     public const string GetLatestMeasurementRoute = ControllerRoute + nameof(GetLatestMeasurement);
 
+    public const string AdminChangesDeviceIntervalRoute = ControllerRoute + nameof(AdminChangesDeviceInterval);
+
     [HttpGet]
     [Route(GetLogsRoute)]
     public async Task<ActionResult<IEnumerable<Devicelog>>> GetLogs([FromHeader] string authorization)
@@ -42,6 +44,23 @@ public class CleanAirController(
         return Ok();
     }
     
+    [HttpPost]
+    [Route(AdminChangesDeviceIntervalRoute)]
+    public async Task<ActionResult> AdminChangesDeviceInterval(
+        [FromHeader] string authorization, 
+        [FromBody] AdminChangesDeviceIntervalDto dto)
+    {
+        var claims = securityService.VerifyJwtOrThrow(authorization);
+        if (claims.Role != "admin")
+        {
+            return Unauthorized("You are not authorized to change intervals");
+        }
+
+        await cleanAirService.UpdateDeviceIntervalAndBroadcast(dto);
+        
+        return Ok();
+    }
+    
     [HttpDelete]
     [Route(DeleteDataRoute)]
     public async Task<ActionResult> DeleteData([FromHeader]string authorization)
@@ -55,7 +74,7 @@ public class CleanAirController(
 
     [HttpGet]
     [Route(GetMeasurementNowRoute)]
-    public async Task<ActionResult> GetMeasurementNow(String authorization)
+    public async Task<ActionResult> GetMeasurementNow([FromHeader] string authorization)
     {
         var claims = securityService.VerifyJwtOrThrow(authorization);
         if (claims.Role != "admin") {
