# server/Application/Interfaces/ICleanAirService.cs
@@ -11,6 +11,7 @@ public interface ICleanAirService
     Task AddToDbAndBroadcast(CollectDataDto? dto);
     Devicelog GetLatestDeviceLog();
     Task UpdateDeviceFeed(AdminChangesPreferencesDto dto, JwtClaims claims);
+    Task UpdateDeviceIntervalAndBroadcast(AdminChangesDeviceIntervalDto dto);
     Task DeleteDataAndBroadcast(JwtClaims jwt);
     Task GetMeasurementNowAndBroadcast();
 }
