# server/Core.Domain/Entities/Devicelog.cs
@@ -20,4 +20,6 @@ public partial class Devicelog
     public decimal Pressure { get; set; }
 
     public int Airquality { get; set; }
+
+    public int Interval { get; set; }
 }
