# server/Infrastructure.Postgres.Scaffolding/MyDbContext.cs
@@ -30,6 +30,7 @@ public partial class MyDbContext : DbContext
             entity.Property(e => e.Humidity)
                 .HasPrecision(4, 2)
                 .HasColumnName("humidity");
+            entity.Property(e => e.Interval).HasColumnName("interval");
             entity.Property(e => e.Pressure)
                 .HasPrecision(6, 2)
                 .HasColumnName("pressure");
